# wordsWithEnemies

./: .gitignore  R.txt  readme.md  readme.txt
Client/: WordsWithEnemiesClient.cabal  hspec.exe.tix  logo.txt  words-with-enemies-client.cabal
Client/executable/: Main.hs
Client/test-suite/: GameSpec.hs  HLint.hs  Haddock.hs
Server/: .ghci  WordsWithEnemiesServer.cabal  stack.yaml  wordlist.txt  words-with-enemies-server.cabal  wordsWithEnemies.db-journal
Server/.hpc/: Main.mix
Server/executable/: Main.hs
Server/snaplets/sqlite-simple/: devel.cfg
Server/test-suite/: Haddock.hs
Server/test-suite/Utils/: MathUtilSpec.hs  TextUtilSpec.hs
