name:           words-with-enemies-client
copyright:      2015 Doreen Sacker, Tobias Wochinger
license:        BSD3
synopsis:       The client of 'words with enemies'
description:    Package for the client of the game 'words with enemies'
category:       Games
maintainer:     sacker@hm.edu, wochinge@hm.edu
version:        0.0.0
build-type:     Simple
cabal-version:  >= 1.18

flag documentation
    default: False

executable client
    build-depends:          base, words-with-enemies-client
    default-language:       Haskell2010
    hs-source-dirs:         executable
    main-is:                Main.hs
    
library
    default-language:       Haskell2010
    exposed-modules:        Game, 
                            Network.EasyNetwork, 
                            Network.PlayerClient, 
                            Types.Player,
                            Network.GameClient,
                            Types.Game,
                            Types.Round,
                            Types.Score,
                            Types.Solution

    hs-source-dirs:         library
    build-depends:      
        base, 
        aeson, 
        bytestring, 
        clock >= 0.4.5.0,
        wreq  >= 0.3,
        containers,
        lens,
        monads-tf
    if flag(documentation)
        build-depends: hscolour == 1.20.*

test-suite hlint
    build-depends:          base, hlint
    default-language:       Haskell2010
    hs-source-dirs:         test-suite
    main-is:                HLint.hs
    type:                   exitcode-stdio-1.0

test-suite haddock
    build-depends:          base, process == 1.2.*, regex-compat == 0.95.*
    default-language:       Haskell2010
    hs-source-dirs:         test-suite
    main-is:                Haddock.hs
    type:                   exitcode-stdio-1.0

test-suite hspec
    build-depends:          base, words-with-enemies-client, hspec, QuickCheck
    default-language:       Haskell2010
    ghc-options:            -fhpc
    hs-source-dirs:         test-suite library
--    other-modules:        Foo, FooSpec
    main-is:                Spec.hs
    type:                   exitcode-stdio-1.0