name:           words-with-enemies-server
copyright:      2015 Doreen Sacken, Tobias Wochinger
license:        BSD3
synopsis:       The server of 'Words with Enemies'
description:    Package for the server of the game 'Words with Enemies'
category:       Games
maintainer:     sacker@hm.edu, wochinge@hm.edu
version:        0.0.0
build-type:     Simple
cabal-version:  >= 1.18

flag development
    description:            Whether to build the server in development (interpreted) mode
    default:                False

flag old-base
    default:                False
    manual:                 False

flag documentation
    default: False
    
executable server
    default-language:       Haskell2010
    hs-source-dirs:         executable
    main-is:                Main.hs
    build-depends:          
        base, 
        words-with-enemies-server, 
        snap,
        bytestring,
        lens

library
    default-language:       Haskell2010
    hs-source-dirs:         library
    exposed-modules:        Application, Site
                            Api.PlayerApp, Api.PlayerSite, 
                            Snap.PrettySnap, 
                            Types.Player, Types.Game, Types.Round, Types.Score, Types.Solution,
                            DB.PlayerDAO, DB.Utils, DB.Dictionary, DB.GameDAO,
                            DB.SolutionDAO, DB.ScoreDAO, DB.RoundDAO
    build-depends:
        base,
        monads-tf,
        aeson,
        snap,
        blaze-builder,
        snap-core, 
        lens,  
        bytestring,
        snaplet-sqlite-simple >= 0.4.8.2,
        sqlite-simple >= 0.4.8.0,
        text
    if flag(documentation)
        build-depends: hscolour == 1.20.*

test-suite hlint
    build-depends:          base, hlint
    default-language:       Haskell2010
    hs-source-dirs:         test-suite
    main-is:                HLint.hs
    type:                   exitcode-stdio-1.0

test-suite haddock
    build-depends:          base, process == 1.2.*, regex-compat == 0.95.*
    default-language:       Haskell2010
    hs-source-dirs:         test-suite
    main-is:                Haddock.hs
    type:                   exitcode-stdio-1.0

test-suite hspec
    build-depends:          base, words-with-enemies-server, hspec, QuickCheck
    default-language:       Haskell2010
    ghc-options:            -fhpc
    hs-source-dirs:         test-suite library
--    other-modules:        Foo, FooSpec
    main-is:                Spec.hs
    type:                   exitcode-stdio-1.0